--- a/src/main/resources/templates/cheese/add.html
+++ b/src/main/resources/templates/cheese/add.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
-<head>
-    <meta charset="UTF-8" />
-    <title th:text="${title}">Title</title>
-</head>
+<head th:replace="fragments :: head"></head>
 <body>
 <h1 th:text="${title}">Default Title</h1>
+<nav th:replace="fragments :: navigation"></nav>
 <form method="post" >
-    <input type="text" name="cheeseName" />
-    <input type="submit" value="Add Cheese" />
+    <p><label>Name of Cheese</label>
+        <input type="text" name="cheeseName" /></p>
+    <p><label>Description of cheese</label>
+        <textarea name="cheeseDescription"></textarea></p>
+    <p><input type="submit" value="Add Cheese" /></p>
 </form>
 </body>
 </html>
