--- a/src/main/resources/templates/cheese/add.html
+++ b/src/main/resources/templates/cheese/add.html
@@ -7,8 +7,8 @@
 <form method="post" >
     <p><label>Name of Cheese</label>
         <input type="text" name="cheeseName" /></p>
-    <p><label>Description of cheese</label>
-        <textarea name="cheeseDescription"></textarea></p>
+    <p><label for="description">Description of cheese</label>
+        <textarea id="description" class="form-textarea" name="description" cols="10"></textarea></p>
     <p><input type="submit" value="Add Cheese" /></p>
 </form>
 </body>
