--- a/src/main/resources/templates/cheese/index.html
+++ b/src/main/resources/templates/cheese/index.html
@@ -7,10 +7,12 @@
 <nav th:replace="fragments :: navigation"></nav>
 
 <p th:unless="${cheeses} and ${cheeses.size()}">no cheese :(</p>
-
-<ul>
-    <li th:each="cheese : ${cheeses}" th:text="${cheese}"></li>
-</ul>
+<table>
+<tr th:each="cheese : ${cheeses}">
+    <td th:text="${cheese.name}"></td>
+    <td th:text="${cheese.description}"></td>
+</tr>
+</table>
 
 </body>
 </html>
