streamlined with models

--- a/src/main/resources/templates/cheese/add.html
+++ b/src/main/resources/templates/cheese/add.html
@@ -6,7 +6,7 @@
 <nav th:replace="fragments :: navigation"></nav>
 <form method="post" >
     <p><label>Name of Cheese</label>
-        <input type="text" name="cheeseName" /></p>
+        <input type="text" name="name" /></p>
     <p><label for="description">Description of cheese</label>
         <textarea id="description" class="form-textarea" name="description" cols="10"></textarea></p>
     <p><input type="submit" value="Add Cheese" /></p>
